# gpm

./: .gitignore  .prettierignore  .worktreeinclude  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  flake.nix  index.html  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  skills-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
.agents/scripts/: smart_format.sh
.claude/: settings.json
.github/workflows/: _build-android.yml  cd.yml  ci.yml  format.yml  lint.yml  release.yml  test.yml  update-flake-lock.yaml
.plans/: 0000-gpm-design.md  0000-rfc-template.md  0001-flag-secure-phase3.md  0001-gpm-design.md  0002-age-encrypted-identity.md  0002-app-lock-biometric.md  0002-encrypted-ssh-key.md  0002-keystore-biometric.md  0003-clipboard-write-error.md  0003-encrypted-ssh-key.md  0003-keystore-biometric.md  0003-repo-authenticity.md  0004-publish-v0.1.0.md  0004-reconfiguration-flow.md  0004-repo-authenticity.md  0005-multi-identity.md  0005-pivot-native-android.md  0005-repo-authenticity.md  0006-android-keystore.md  0006-interaction-states.md  0006-secure-clipboard.md  0006-ssh-key-age-identity.md  0007-async-migration.md  0007-git-cancellation-progress.md  0007-reconfiguration-flow.md  0007-secure-clipboard.md  0007-ssh-git-auth.md  0007-user-journey-emotional-arc.md  0008-age-post-quantum-roadmap.md  0008-design-system.md  0008-fix-auto-lock-timer.md  0008-multi-identity.md  0008-reconfiguration-flow.md  0009-gpg-signature-verification.md  0009-post-quantum-detection.md  0009-post-quantum-roadmap.md  0009-responsive-accessibility.md  0010-dry-identity-validation.md  0010-gpg-signature-verification.md  0010-keystore-at-rest-encryption.md  (+36 more)
docs/: SECURITY.md
docs/adr/: 0001-tauri-v2-rust-vue-age-only-gopass-client.md  0002-rust-first-without-gopass.md  0003-configuration-storage-tiering.md
docs/rfcs/: 0000-rfc-template.md  0004-reconfiguration-flow.md  0005-multi-identity.md  0025-age-store-plugin.md  0027-secret-revisions.md  0031-component-level-screen-secure.md  0034-killable-git-transport.md  0038-configuration-storage-layering.md  0052-logging.md  (+15 more)
gpm-plugin-keystore/: Cargo.toml  build.rs
gpm-plugin-keystore/permissions/: default.toml
gpm-plugin-keystore/permissions/autogenerated/: reference.md
gpm-plugin-keystore/permissions/autogenerated/commands/: has_stored.toml  retrieve.toml  store.toml
gpm-plugin-keystore/permissions/schemas/: schema.json
gpm-plugin-keystore/src/: lib.rs
gpm-plugin-safe-area/: Cargo.toml
public/: site.webmanifest
rustpass/: Cargo.toml
rustpass/data/: cacert.pem.license
rustpass/data/wordlist/: english.txt.license
rustpass/src/: atrest.rs  config.rs  crypto.rs  entry.rs  error.rs  generator.rs  git.rs  identity.rs  lib.rs  recipient.rs  rng.rs  seal.rs  secret.rs  signing.rs  ssh.rs  store.rs  template.rs  totp.rs
rustpass/src/crypto/: age.rs  gpg.rs  mod.rs  openpgp.rs
rustpass/src/storage/: mod.rs  registry.rs
rustpass/src/storage/git/: backend.rs  commit.rs  divergence.rs  mod.rs  pull.rs  rcs.rs  test_support.rs  transport.rs  util.rs  worktree.rs
rustpass/tests/: create_store.rs  crypto_backend_gpg.rs  crypto_edge_cases.rs  crypto_pipeline.rs  delete_conflict.rs  edit_conflict.rs  entry_edge_cases.rs  fixtures.rs  git_integration.rs  gopass_interop.rs  identity_encryption.rs  pagination.rs  search.rs  secret_format.rs  security.rs  signing_authenticity.rs  ssh_identity.rs  storage_integration.rs  store_facade.rs  sync_divergence.rs  sync_resolve.rs  templates.rs  write.rs  write_conflict.rs
rustpass/tests/common/: mod.rs
rustpass/tests/fixtures/gpg/: gpg-encrypted.gpg  payload.sig.asc  payload.txt  pubkey.asc  public.asc  secret.asc
scripts/: bump-version.sh  check-locale-keys.mjs  gen-icons.sh  gen-licenses.mjs  vite-plugin-licenses.mjs
src/: App.vue  appLock.ts  biometric.test.ts  biometric.ts  main.ts  router-guards.test.ts  router-guards.ts  style.css  theme.test.ts  theme.ts  types.ts  vue-router.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: app_config.rs  applock.rs  authenticity.rs  biometric.rs  clipboard.rs  config.rs  crypto.rs  error.rs  generator.rs  git.rs  identity.rs  lib.rs  logging.rs  main.rs  migrate.rs  page.rs  read.rs  secure_storage.rs  setup.rs  store.rs  write.rs
src-tauri/src/migrations/: m0002_config_scope_split.rs  m0003_secure_screen_mode.rs  mod.rs
src-tauri/src/tests/: clipboard_clear.rs  git_commands.rs  lock_state.rs  migrate.rs  migrations.rs  mod.rs  read_commands.rs  seal_migrate.rs  setup_flow.rs  write_conflict.rs
src-tauri/tests/: fixtures.rs  git_integration.rs  security.rs  storage_integration.rs
src-tauri/tests/common/: mod.rs
tauri-plugin-biometric-keystore/: Cargo.toml  build.rs
tauri-plugin-biometric-keystore/android/: build.gradle.kts  consumer-rules.pro
tauri-plugin-biometric-keystore/android/src/main/java/: KeystorePlugin.kt
tauri-plugin-biometric-keystore/android/src/test/java/xyz/yzx9/gpm/biometrickeystore/: KeystorePluginTest.kt
tauri-plugin-biometric-keystore/src/: lib.rs
tauri-plugin-clipboard-notify/: Cargo.toml  build.rs
tauri-plugin-file-picker/: Cargo.toml  build.rs
tauri-plugin-file-picker/android/: build.gradle.kts
tauri-plugin-file-picker/android/src/main/java/: FilePickerPlugin.kt
tauri-plugin-file-picker/android/src/test/java/xyz/yzx9/gpm/filepicker/: FilePickerPluginTest.kt
tauri-plugin-file-picker/permissions/: default.toml
tauri-plugin-file-picker/src/: lib.rs
tauri-plugin-safe-area/: Cargo.toml  build.rs
tauri-plugin-screen-secure/: Cargo.toml  build.rs
tauri-plugin-secure-keystore/: Cargo.toml  build.rs
tauri-plugin-secure-keystore/android/: build.gradle.kts  consumer-rules.pro
tauri-plugin-secure-keystore/android/src/main/java/: SecureKeystorePlugin.kt
tauri-plugin-secure-keystore/android/src/test/java/xyz/yzx9/gpm/securekeystore/: SecureKeystorePluginTest.kt
tauri-plugin-secure-keystore/permissions/: default.toml
tauri-plugin-secure-keystore/src/: lib.rs
(+215 files in other folders)
