[workspace]
resolver = "2"
members = [
  "rustpass",
  "src-tauri",
  "tauri-plugin-safe-area",
  "tauri-plugin-biometric-keystore",
  "tauri-plugin-secure-keystore",
  "tauri-plugin-file-picker",
]

[workspace.package]
version = "0.5.0"
authors = ["Zexin Yuan"]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
age = { version = "0.11", features = ["armor", "ssh"] }
zeroize = { version = "1", features = ["derive"] }
git2 = { version = "0.20", features = ["vendored-openssl", "vendored-libgit2"] }
walkdir = "2"
nucleo-matcher = "0.3"
tokio = { version = "1", features = ["time"] }
tempfile = "3"
ssh-key = { version = "0.6", features = [
  "ed25519",
  "encryption",
  "rand_core",
  "std",
] }
# At-rest AEAD for local private files (repo.json, identity). AES-256-GCM gives
# confidentiality + integrity in one op with a random symmetric master key.
aes-gcm = "0.10"
# OS RNG for the master key + per-seal GCM nonces.
getrandom = "0.2"
# Base64 for the master key crossing the Rust ↔ Android-plugin IPC boundary.
base64 = "0.22"
