[workspace]
resolver = "2"
members = [
  "rustpass",
  "src-tauri",
  "tauri-plugin-safe-area",
  "tauri-plugin-biometric-keystore",
  "tauri-plugin-secure-keystore",
  "tauri-plugin-file-picker",
  "tauri-plugin-screen-secure",
  "tauri-plugin-clipboard-notify",
]

[workspace.package]
version = "0.13.0"
authors = ["Zexin Yuan"]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `plugin` enables the age plugin protocol (age-plugin-yubikey etc.). The library
# spawns `age-plugin-<name>` as a subprocess, so plugin encrypt/decrypt only works
# where that binary exists (desktop); Android lacks the binary and fails cleanly.
age = { version = "0.11", features = ["armor", "ssh", "plugin"] }
# async-fn-in-trait under `dyn` dispatch. rust-lang/rust#133119 (`async_fn_in_dyn_trait`)
# is still unstable, so the crypto/storage backend traits desugar through this macro
# until native support lands. Drop it (and the macro annotations) once that ships.
async-trait = "0.1"
zeroize = { version = "1", features = ["derive", "serde"] }
git2 = { version = "0.20", features = ["vendored-openssl", "vendored-libgit2"] }
# For Android HTTPS CA loading (see `rustpass::git::ensure_https_ca_loaded`):
# `libgit2-sys` for the `GIT_OPT_ADD_SSL_X509_CERT` call (already transitive via
# git2), and the high-level `openssl` crate for PEM parsing. `openssl` depends
# on `openssl-sys` — which git2 already vendors — so no extra OpenSSL is built.
libgit2-sys = "0.18"
openssl = "0.10"
# `ForeignType` trait for `X509::as_ptr` in the Android CA-load path; same 0.3.x
# openssl already pulls in, so this resolves no new crate version.
foreign-types = "0.3"
walkdir = "2"
nucleo-matcher = "0.3"
tokio = { version = "1", features = ["time"] }
tempfile = "3"
ssh-key = { version = "0.6", features = [
  "ed25519",
  "encryption",
  "rand_core",
  "std",
] }
# Pure-Rust OpenPGP (RFC 9580) for GPG commit-signature verification (RFC 0009).
# Same pure-Rust, MIT/Apache, no-ring/openssl posture as `age`/`ssh-key`, so it
# cross-compiles to Android NDK with no C deps. The `crypto::openpgp` wrapper is
# also the shared seam for the future GPG crypto backend (RFC 0036).
pgp = "0.19"
# RNG + SmallVec for rpgp's key-generation and MessageBuilder paths (builder
# methods take `&mut impl CryptoRng`; preferred-algorithm lists are SmallVec).
rand = "0.8"
smallvec = "1"
# At-rest AEAD for local private files (repo.json, identity). AES-256-GCM gives
# confidentiality + integrity in one op with a random symmetric master key.
aes-gcm = "0.10"
# OS RNG for the master key + per-seal GCM nonces.
getrandom = "0.2"
# Base64 for the master key crossing the Rust ↔ Android-plugin IPC boundary.
base64 = "0.22"
# Bech32 for tests that construct valid age plugin recipient/identity encodings.
bech32 = { version = "0.9", default-features = false }
# TOTP (RFC 6238) generation for entries that store a 2FA seed (gopass `pkg/otp`
# analogue). `otpauth` parses otpauth:// URIs; `zeroize` wipes the seed on drop.
# `qr` is deliberately off — unused, and it would pull `qrcode` + `image` and
# bloat the Android build.
totp-rs = { version = "5", default-features = false, features = ["otpauth", "zeroize"] }
