[package]
name = "rustpass"
description = "Rust library for age-encrypted gopass password stores"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
age = { workspace = true }
zeroize = { workspace = true }
git2 = { workspace = true }
libgit2-sys = { workspace = true }
openssl = { workspace = true }
foreign-types = { workspace = true }
walkdir = { workspace = true }
nucleo-matcher = { workspace = true }
ssh-key = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt"] }
aes-gcm = { workspace = true, features = ["zeroize"] }
getrandom = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
bech32 = { workspace = true }
