[package]
name = "rustpass"
description = "Rust library for age-encrypted gopass password stores"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
age = { workspace = true }
rand = { workspace = true }
smallvec = { workspace = true }
async-trait = { workspace = true }
zeroize = { workspace = true }
git2 = { workspace = true }
libgit2-sys = { workspace = true }
openssl = { workspace = true }
foreign-types = { workspace = true }
walkdir = { workspace = true }
nucleo-matcher = { workspace = true }
ssh-key = { workspace = true }
pgp = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt", "sync"] }
aes-gcm = { workspace = true, features = ["zeroize"] }
getrandom = { workspace = true }
# TOTP (RFC 6238) generation for entries storing a 2FA seed (gopass `pkg/otp`).
totp-rs = { workspace = true }
# `log` facade for library-layer diagnostics (RFC 0052 phase 3). The backend
# (`tauri-plugin-log`) is chosen by the app; in `rustpass`'s own tests the macros
# are no-ops because no logger is installed.
log = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
bech32 = { workspace = true }
