[package]
name = "gpm"
description = "Android-first age-only gopass password client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "gpm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
gpm-plugin-safe-area = { path = "../gpm-plugin-safe-area" }
gpm-plugin-keystore = { path = "../gpm-plugin-keystore" }
rustpass = { path = "../rustpass" }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
