[package]
name = "gpm"
description = "Android-first age-only gopass password client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "gpm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-safe-area = { path = "../tauri-plugin-safe-area" }
tauri-plugin-biometric-keystore = { path = "../tauri-plugin-biometric-keystore" }
tauri-plugin-secure-keystore = { path = "../tauri-plugin-secure-keystore" }
tauri-plugin-file-picker = { path = "../tauri-plugin-file-picker" }
tauri-plugin-screen-secure = { path = "../tauri-plugin-screen-secure" }
tauri-plugin-clipboard-notify = { path = "../tauri-plugin-clipboard-notify" }
tauri-plugin-log = "2"
rustpass = { path = "../rustpass" }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
tokio = { workspace = true, features = ["rt", "fs"] }
base64 = { workspace = true }
sys-locale = "0.3"
log = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
age = { workspace = true }
git2 = { workspace = true }
# `macros` + `rt-multi-thread` for `#[tokio::test]`; `time` comes from the workspace dep.
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# Enables `tauri::test` (the mock-runtime harness) during `cargo test`. Cargo
# unifies this with the [dependencies] tauri, so it adds the feature only for
# test builds.
tauri = { version = "2", features = ["test"] }
