[package]
name = "tauri-plugin-secure-keystore"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
links = "tauri-plugin-secure-keystore"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = "2"
serde = { workspace = true }
